tests/spec/emit/snapshots/array_from_propagates_with_question_mark.snap
---
source: tests/spec/emit/arrays.rs
description: |
  
  fn first(xs: Slice<int>) -> Option<int> {
    let a = Array.from<int, 3>(xs)?
    Some(a[0])
  }
---
package main

func first(xs []int) (int, bool) {
	a, ok := func(s []int) ([3]int, bool) {
		if len(s) != 3 {
			return [3]int{}, false
		}
		return ([3]int)(s), true
	}(xs)
	if !ok {
		return 0, false
	}
	return a[0], true
}
