tests/spec/emit/snapshots/array_get_to_slice_identifier_form.snap
---
source: tests/spec/emit/arrays.rs
description: |
  
  fn at(xs: Array<int, 3>, i: int) -> Option<int> {
    Array.get(xs, i)
  }
  
  fn all(xs: Array<int, 3>) -> Slice<int> {
    Array.to_slice(xs)
  }
---
package main

import (
	lisette "github.com/ivov/lisette/prelude"
	"slices"
)

func at(xs [3]int, i int) (int, bool) {
	v := lisette.SliceGet(xs[:], i)
	if v.Tag == lisette.OptionSome {
		return v.SomeVal, true
	}
	return 0, false
}

func all(xs [3]int) []int {
	return slices.Clone(xs[:])
}
