tests/spec/emit/snapshots/array_in_containers.snap
---
source: tests/spec/emit/arrays.rs
description: |
  
  type Addr = Array<byte, 4>
  
  struct Holder {
    slice_of_arr: Slice<Array<int, 3>>,
    map_val_arr: Map<string, Array<int, 3>>,
    ptr_to_arr: Ref<Array<int, 3>>,
    multidim: Array<Array<int, 3>, 2>,
    aliased: Addr,
  }
---
package main

type Addr = [4]byte

type Holder struct {
	sliceOfArr [][3]int
	mapValArr  map[string][3]int
	ptrToArr   *[3]int
	multidim   [2][3]int
	aliased    Addr
}
