tests/spec/emit/snapshots/array_length.snap
---
source: tests/spec/emit/arrays.rs
description: |
  
  fn count(xs: Array<int, 3>) -> int {
    xs.length()
  }
---
package main

func count(xs [3]int) int {
	return len(xs)
}
